# 305-proyecto-intermedio-ia

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: base_config.json  forense_analyzer_config.json  mapping_config.json  master_builder_config.json  master_exporter_config.json  ml_config.json
docs/: analisis_brechas.json  architecture.md  auditoria_forense.csv  auditoria_poblacion.csv  auditoria_seforense.csv  auditoria_sexuales.csv  auditoria_violencia.csv  conclusiones.md  cuarentena_duplicados_forense.csv  cuarentena_duplicados_sexuales.csv  cuarentena_duplicados_violencia.csv  data_dictionary.md  diagnostico_resumen.json  evidencia_temporal_split.json  fuentes_datos.md  mapeo_estructural_raw.csv  marco_metodologico.md  planteamiento_problema.md  pre_registro_kmeans.md  sensibilidad_pesos_icv.json  todos_valores_agresor.csv  todos_valores_dias_incapacidad.csv  todos_valores_escenario.csv  validacion_capas_pre_join.csv  validation_guide.md
models/: final_cluster_predictor.pkl  final_predictor.pkl  logisticregression_predictor.pkl  predictor_metadata.json
notebooks/: 00_ETL_pipeline.ipynb  01_diagnostico_estadistico.ipynb  02_sensibilidad_pesos_icv.ipynb  03_ml_entrenamiento.ipynb  04_analisis_brechas.ipynb  05_Caracterizacion_forense.ipynb  auditoria_master.ipynb  prueba.ipynb
schema/: acto_1_panorama.schema.json  acto_2_brechas.schema.json  acto_3_tipologia.schema.json  acto_4_forense.schema.json
schemas/: acto_5_ficha_forense_municipal.schema.json  acto_5_municipios.schema.json
scripts/: build_geojson_departamental.py  build_geojson_pacifico.py  (+2 more)
(+111 files in other folders)
