[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proyecto_crimen"
version = "0.1.0"
description = "Cicatrices Invisibles - Cali, Colombia"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "openpyxl",
    "geopandas"
]